applets/systemtray: ensure registry and settings are set in restoreContents

Also parent applet plugins to their PlasmaWindowedCorona instantiator.

BUG: 506064
FIXED-IN: 6.5.0